<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_experience">How was your experience with us?</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_suggestions">"Suggest us what went wrong and we'll work on it!"</string>
    <string name="CBHPeople">People</string>
    <string name="CBHUnits">Units</string>
    <string name="CBHcoicoi">Coins</string>
    <string name="DisplayNamesStartsFromHere">NULL</string>
    <string name="TUTORIAL_GO_FILL_HEALTH_HUNGER_JOB">"Look Your Health and Hunger Level has reduced.
Lets go fill them"</string>
    <string name="TUTORIAL_GO_WORK_JOB">"Lets start working 
Since I am just starting out I can only beg"</string>
    <string name="TUTORIAL_WELCOME_HOME">"Hey there! 
I'm Dave, Your job is to rise my standards of living to compete with other Dave's globally."</string>
    <string name="_0_people">0 People</string>
    <string name="_1000_coins">1000 coins</string>
    <string name="_1000_coins2">1000 Coins</string>
    <string name="_100_units">100 Units</string>
    <string name="_100_units2">100 Units</string>
    <string name="_100_units3">100 Units</string>
    <string name="_20">20</string>
    <string name="_200_coins">200 coins</string>
    <string name="_200_units">200 Units</string>
    <string name="_20_coins">20 coins</string>
    <string name="_300">300$</string>
    <string name="_300_300">300/300</string>
    <string name="_300_30012">300/300</string>
    <string name="_300_3003">300/300</string>
    <string name="_300_300_">300/300</string>
    <string name="_400">400$</string>
    <string name="_4002">400$</string>
    <string name="_55_seconds">55 seconds</string>
    <string name="_5_units">5 units</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="achievement_beat_basket_ball_player">CgkIsOK_r-kPEAIQEw</string>
    <string name="achievement_beat_boxer">CgkIsOK_r-kPEAIQEg</string>
    <string name="achievement_beat_doctor">CgkIsOK_r-kPEAIQEQ</string>
    <string name="achievement_beat_fire_fighter">CgkIsOK_r-kPEAIQDw</string>
    <string name="achievement_beat_hollywood_actor">CgkIsOK_r-kPEAIQFg</string>
    <string name="achievement_beat_hotel_waiter">CgkIsOK_r-kPEAIQDQ</string>
    <string name="achievement_beat_mr_cash">CgkIsOK_r-kPEAIQFw</string>
    <string name="achievement_beat_pilot">CgkIsOK_r-kPEAIQEA</string>
    <string name="achievement_beat_scientist">CgkIsOK_r-kPEAIQFA</string>
    <string name="achievement_beat_super_market_worker">CgkIsOK_r-kPEAIQDg</string>
    <string name="achievement_beat_the_agent">CgkIsOK_r-kPEAIQFQ</string>
    <string name="achievement_buy_condo">CgkIsOK_r-kPEAIQBQ</string>
    <string name="achievement_buy_house">CgkIsOK_r-kPEAIQBA</string>
    <string name="achievement_buy_mansion">CgkIsOK_r-kPEAIQBg</string>
    <string name="achievement_rent_appartment">CgkIsOK_r-kPEAIQAw</string>
    <string name="achievement_rent_basement">CgkIsOK_r-kPEAIQAg</string>
    <string name="action_Achievements">Achievements</string>
    <string name="action_anonymous_chat">Anonymous Chat</string>
    <string name="action_cash">Cash</string>
    <string name="action_help">Help</string>
    <string name="action_leaderboards">Leaderboards</string>
    <string name="admob_homeless_city_builder_module">ca-app-pub-6964252778602125/5695041091</string>
    <string name="age">Age :</string>
    <string name="alert_dialog_positive">OK</string>
    <string name="almost_there">Almost there …</string>
    <string name="app_id">543681409328</string>
    <string name="app_name">Life Simulator</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="back10">Back</string>
    <string name="back2">Back</string>
    <string name="back3">Back</string>
    <string name="back4">Back</string>
    <string name="back5">Back</string>
    <string name="back6">Back</string>
    <string name="back7">Back</string>
    <string name="bank">Bank :</string>
    <string name="bank2">Bank :</string>
    <string name="banner_ad_unit_id">ca-app-pub-6964252778602125/3133258297</string>
    <string name="bosses_to_beat">Bosses To Beat</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="buy">Market</string>
    <string name="cash">Cash :</string>
    <string name="cash2">Cash :</string>
    <string name="cash3">Cash :</string>
    <string name="cash5">Cash :</string>
    <string name="central_bank">Central Bank</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="city_builder_mode">City Builder Mode</string>
    <string name="congra_want_to_chal_friends">Congratulations you are now a millionaire want to challenge your friends ?</string>
    <string name="congragulations_u_have_been_revived">Congratulations you have been revived be careful next time</string>
    <string name="cozy_cottage">Cozy Cottage</string>
    <string name="credits">Credits</string>
    <string name="criminal_jobs">Criminal Jobs</string>
    <string name="criminal_skills">Criminal Skills</string>
    <string name="default_string">default_string</string>
    <string name="default_web_client_id">543681409328-pgujquiiisfg6eg2p0a33evm27orl8kt.apps.googleusercontent.com</string>
    <string name="deposit">Deposit</string>
    <string name="education">Education</string>
    <string name="education2">Education :</string>
    <string name="education3">Education</string>
    <string name="enjoyedgame">Did you enjoy the game?</string>
    <string name="enter_your_code">Enter Your Code</string>
    <string name="entertainment">Watch TV</string>
    <string name="event_get_1000">CgkIsOK_r-kPEAIQBw</string>
    <string name="event_get_10000">CgkIsOK_r-kPEAIQCA</string>
    <string name="event_get_100000">CgkIsOK_r-kPEAIQCQ</string>
    <string name="event_get_1000000">CgkIsOK_r-kPEAIQCg</string>
    <string name="extras">Extras</string>
    <string name="firebase_database_url">https://test-ad17e.firebaseio.com</string>
    <string name="gcm_defaultSenderId">543681409328</string>
    <string name="get_1000_coins_by_watching_a_video">Get 1000 coins By watching a video</string>
    <string name="get_cash">Get Cash</string>
    <string name="get_dave_some_food">Get Dave some food</string>
    <string name="givereview">Please Consider Giving A Review On Play Store.It really motivates me :)</string>
    <string name="go">Go</string>
    <string name="land">Land :</string>
    <string name="land_expansion">Land Expansion</string>
    <string name="population2">Population :</string>
    <string name="profile">Profile</string>
    <string name="with_each_upgrade_you_will_be_able_to_fit_in_more_buildings">With each upgrade you will be able to fit in more buildings</string>
    <string name="work">Work</string>
</resources>