<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/layouta" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
        <ImageView android:id="@id/imageView" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_margin="10.0dip" android:layout_weight="0.0" app:srcCompat="@mipmap/purse" />
        <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:text="@string/cash3" />
        <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:text="@string/_1000_coins2" android:layout_weight="0.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:weightSum="1.0" android:layout_below="@id/layouta" android:layout_alignParentLeft="true">
        <ImageView android:id="@id/imageView" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_margin="10.0dip" android:layout_weight="0.0" app:srcCompat="@mipmap/purse" />
        <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:text="@string/land" />
        <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:text="@string/_100_units2" android:layout_weight="0.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:weightSum="1.0" android:layout_below="@id/linearLayout2" android:layout_alignParentRight="true">
        <ImageView android:id="@id/imageView" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_margin="10.0dip" android:layout_weight="0.0" app:srcCompat="@mipmap/purse" />
        <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:text="@string/population2" />
        <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:text="@string/_0_people" android:layout_weight="0.0" />
    </LinearLayout>
</RelativeLayout>