<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView android:id="@id/cardView2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="8.0dip" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <EditText android:id="@id/editText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:hint="@string/enter_your_code" android:ems="10" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:inputType="number" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <Button android:id="@id/button9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/go" android:layout_toRightOf="@id/editText" android:layout_alignParentTop="true" android:onClick="s_click" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/editText" style="@style/Widget.AppCompat.Button.Colored" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView android:id="@id/Jobs" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="8.0dip" android:onClick="watch_video_ad" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/cardView2">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:onClick="watch_video_ad" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
            <TextView android:textSize="16.0sp" android:id="@id/$name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/get_1000_coins_by_watching_a_video" android:layout_weight="1.0" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <ImageView android:id="@id/$icon" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:layout_alignParentTop="true" android:layout_alignParentRight="true" app:srcCompat="@mipmap/ic_redeem_black_24dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <Button android:id="@id/button10" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="16.0dip" android:text="@string/back" android:onClick="back_er" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/Widget.AppCompat.Button.Colored" />
</android.support.constraint.ConstraintLayout>