<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView android:id="@id/cv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="5.0dip">
            <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_alignLeft="@id/relativeLayout" android:layout_alignParentTop="true">
                <ImageView android:id="@id/imageView5" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" app:srcCompat="@mipmap/purse" />
                <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@id/textView10" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/cash" android:layout_above="@id/relativeLayout" android:layout_alignLeft="@id/listview_utility" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@id/tv_cash_in_pocket" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/default_string" android:layout_weight="0.85" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_alignLeft="@id/relativeLayout" android:layout_alignParentTop="true">
                <ImageView android:id="@id/imageView7" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" app:srcCompat="@mipmap/bank" />
                <TextView android:textSize="18.0sp" android:gravity="center" android:id="@id/textView11" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/bank" android:layout_above="@id/relativeLayout" android:layout_alignLeft="@id/listview_utility" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:id="@id/tv_bank" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/_400" android:layout_weight="0.84" android:layout_toRightOf="@id/textView10" android:layout_alignBaseline="@id/textView10" android:layout_alignBottom="@id/textView10" app:layout_constraintLeft_toRightOf="@id/textView10" app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/product_buy" android:background="@color/colorAccent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="30.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
            <ImageView android:layout_gravity="center" android:id="@id/imageView17" android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginLeft="10.0dip" android:layout_weight="1.0" android:layout_centerVertical="true" app:srcCompat="@mipmap/coin_green" />
            <EditText android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:textColorHint="@color/colorPrimaryDark" android:id="@id/tv_amount" android:background="@color/colorAccent" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:hint="Enter cash to deposit/withdraw" android:ems="10" android:layout_toRightOf="@id/imageView17" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:inputType="number" />
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:weightSum="2.0" android:layout_below="@id/product_buy">
            <LinearLayout android:orientation="vertical" android:id="@id/ll_deposit" android:background="@color/colorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:weightSum="1.0" android:layout_weight="1.0" android:onClick="deposit">
                <ImageView android:id="@id/deposit_img" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="5.0dip" app:srcCompat="@mipmap/growth" />
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/deposit_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="8.0dip" android:text="Deposit" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/ll_withdraw" android:background="@color/colorDanger" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:weightSum="1.0" android:layout_weight="1.0" android:layout_below="@id/tv_amount" android:onClick="withdraw">
                <ImageView android:id="@id/withdraw_img" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="5.0dip" app:srcCompat="@mipmap/withdraw_icon" />
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/withdraw_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="8.0dip" android:text="Withdraw" />
            </LinearLayout>
        </LinearLayout>
        <Button android:id="@id/button6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:onClick="go_back" style="@style/Widget.AppCompat.Button.Colored" />
        <com.google.android.gms.ads.AdView android:id="@id/adView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@id/button6" android:layout_centerHorizontal="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintBottom_toTopOf="@id/bottom_navigation" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:adSize="BANNER" app:adUnitId="@string/banner_ad_unit_id" />
    </RelativeLayout>
</LinearLayout>